--- a/评价系统观察记录.md
+++ b/评价系统观察记录.md
@@ -191,32 +191,107 @@ classId: f057359a-0ffb-4509-b194-129fb732994e
 }
 ```
 
-# 历史观察记录（按学生）【等待开发】
+# 历史观察记录（按学生studentId）
 
 ## api
 
 ### get方法
 
-/api/observation/student/{studentId}/week/{week}
+/api/observation/student/week/{week}
 
 ## 示例
 
-/api/observation/student/37e7df0f-9b43-4533-9d08-1dbe5c988bac/week/17
+/api/observation/student/week/17
 
 ### 参数
 
 ```
 week: 17
-studentId: 37e7df0f-9b43-4533-9d08-1dbe5c988bac
 ```
 
 ### 返回
 
+```json
+{
+    "code": 200,
+    "msg": "正常返回",
+    "result": {
+        "data": [
+            {
+                "id": 9,
+                "teacherId": "ce242bb2-1730-4d77-a699-7d70f277cba9",
+                "teacherName": "监测",
+                "studentId": "37e7df0f-9b43-4533-9d08-1dbe5c988bac",
+                "studentName": "201901",
+                "studentNo": 99,
+                "title": "活动b",
+                "time": 1577084534000,
+                "responsibleTeacherId": "ce242bb2-1730-4d77-a699-7d70f277cba9",
+                "responsibleTeacherName": "监测",
+                "content": "观察内容2",
+                "analysis": "观察分析2",
+                "measure": "观察方法2",
+                "imgs": "ccc3adeb-b8b6-4fa7-9062-9e19592fc692,ccc3adeb-b8b6-4fa7-9062-9e19592fc692,"
+            },
+            {
+                "id": 8,
+                "teacherId": "ce242bb2-1730-4d77-a699-7d70f277cba9",
+                "teacherName": "监测",
+                "studentId": "37e7df0f-9b43-4533-9d08-1dbe5c988bac",
+                "studentName": "201901",
+                "studentNo": 99,
+                "title": "活动b",
+                "time": 1577069358000,
+                "responsibleTeacherId": "ce242bb2-1730-4d77-a699-7d70f277cba9",
+                "responsibleTeacherName": "监测",
+                "content": "观察内容2",
+                "analysis": "观察分析2",
+                "measure": "观察方法2",
+                "imgs": "ccc3adeb-b8b6-4fa7-9062-9e19592fc692,ccc3adeb-b8b6-4fa7-9062-9e19592fc692,"
+            },
+            {
+                "id": 6,
+                "teacherId": "ce242bb2-1730-4d77-a699-7d70f277cba9",
+                "teacherName": "监测",
+                "studentId": "37e7df0f-9b43-4533-9d08-1dbe5c988bac",
+                "studentName": "201901",
+                "studentNo": 99,
+                "title": "活动a",
+                "time": 1576845736000,
+                "responsibleTeacherId": "00a62086-1f1d-46d8-80a3-f8c2c2909b65",
+                "responsibleTeacherName": "管理员",
+                "content": "观察内容",
+                "analysis": "观察分析",
+                "measure": "观察方法",
+                "imgs": "4e8d6acf-3c70-48db-bc68-7a0bf66d4583,ccc3adeb-b8b6-4fa7-9062-9e19592fc692,98e67852-5ab9-4436-8de6-1ca229a7e2c6,"
+            },
+            {
+                "id": 5,
+                "teacherId": "ce242bb2-1730-4d77-a699-7d70f277cba9",
+                "teacherName": "监测",
+                "studentId": "37e7df0f-9b43-4533-9d08-1dbe5c988bac",
+                "studentName": "201901",
+                "studentNo": 99,
+                "title": "活动a",
+                "time": 1576844929000,
+                "responsibleTeacherId": "ce242bb2-1730-4d77-a699-7d70f277cba9",
+                "responsibleTeacherName": "监测",
+                "content": "观察内容",
+                "analysis": "观察分析",
+                "measure": "观察方法",
+                "imgs": "ccc3adeb-b8b6-4fa7-9062-9e19592fc692,ccc3adeb-b8b6-4fa7-9062-9e19592fc692,"
+            }
+        ],
+        "count": 4,
+        "totalnum": 4,
+        "pindex": 0
+    }
+}
 ```
 
-```
+### 注意
 
-
+studentId来自于session中FAMILY_STUDENTID属性
 
 
 
