更新观察记录与学生的关系为一对多

--- a/评价系统观察记录.md
+++ b/评价系统观察记录.md
@@ -33,7 +33,7 @@ endld: 结束号
 
 
 
-# 上传观察记录照片（既有接口）
+# 上传观察记录照片
 
 ## api
 
@@ -45,6 +45,7 @@ endld: 结束号
 
 ```
 file: (binary)
+search: yes
 type: 类型
 ```
 
@@ -154,42 +155,205 @@ classId: f057359a-0ffb-4509-b194-129fb732994e
     "result": {
         "data": [
             {
-                "id": 16,
+                "id": 328,
                 "teacherId": "ce242bb2-1730-4d77-a699-7d70f277cba9",
                 "teacherName": "监测",
-                "studentId": "37e7df0f-9b43-4533-9d08-1dbe5c988bac",
-                "studentName": "201901",
-                "studentNo": 99,
+                "students": [
+                    {
+                        "observationId": 328,
+                        "studentId": "37e7df0f-9b43-4533-9d08-1dbe5c988bac",
+                        "studentName": "201901",
+                        "studentNo": "99"
+                    }
+                ],
                 "title": "活动b",
-                "time": 1577275741000,
+                "time": 1578041925000,
                 "responsibleTeacherId": "ce242bb2-1730-4d77-a699-7d70f277cba9",
                 "responsibleTeacherName": "监测",
-                "content": "观察内容2",
-                "analysis": "观察分析2",
-                "measure": "观察方法2",
-                "observationImgs": "/upload/1/7db3b929-a893-472e-9066-4017237f33f5.jpg,/upload/1/7db3b929-a893-472e-9066-4017237f33f5.jpg",
-                "productionImgs": "/upload/1/7db3b929-a893-472e-9066-4017237f33f5.jpg"
+                "content": "活动内容c",
+                "analysis": "活动分析c",
+                "measure": "活动方法",
+                "observationImgs": "/upload/1/9344afbf-373d-470a-ab7f-d965856d8d60.jpg",
+                "productionImgs": "/upload/1/40dbc166-d271-4cbb-b2ef-93f12d9eceb9.jpg,/upload/1/35dce4e7-4600-418e-9b10-f644718629fd.jpg"
             },
             {
-                "id": 15,
+                "id": 327,
                 "teacherId": "ce242bb2-1730-4d77-a699-7d70f277cba9",
                 "teacherName": "监测",
-                "studentId": "37e7df0f-9b43-4533-9d08-1dbe5c988bac",
-                "studentName": "201901",
-                "studentNo": 99,
+                "students": [
+                    {
+                        "observationId": 327,
+                        "studentId": "37e7df0f-9b43-4533-9d08-1dbe5c988bac",
+                        "studentName": "201901",
+                        "studentNo": "99"
+                    }
+                ],
                 "title": "活动b",
-                "time": 1577275714000,
+                "time": 1577956897000,
                 "responsibleTeacherId": "ce242bb2-1730-4d77-a699-7d70f277cba9",
                 "responsibleTeacherName": "监测",
-                "content": "观察内容2",
-                "analysis": "观察分析2",
-                "measure": "观察方法2",
+                "content": "活动内容c",
+                "analysis": "活动分析c",
+                "measure": "活动方法",
+                "observationImgs": "/upload/1/9344afbf-373d-470a-ab7f-d965856d8d60.jpg",
+                "productionImgs": "/upload/1/40dbc166-d271-4cbb-b2ef-93f12d9eceb9.jpg,/upload/1/35dce4e7-4600-418e-9b10-f644718629fd.jpg"
+            },
+            {
+                "id": 326,
+                "teacherId": "ce242bb2-1730-4d77-a699-7d70f277cba9",
+                "teacherName": "监测",
+                "students": [
+                    {
+                        "observationId": 326,
+                        "studentId": "37e7df0f-9b43-4533-9d08-1dbe5c988bac",
+                        "studentName": "201901",
+                        "studentNo": "99"
+                    }
+                ],
+                "title": "活动b",
+                "time": 1577956722000,
+                "responsibleTeacherId": "ce242bb2-1730-4d77-a699-7d70f277cba9",
+                "responsibleTeacherName": "监测",
+                "content": "活动内容c",
+                "analysis": "活动分析c",
+                "measure": "活动方法",
                 "observationImgs": "",
-                "productionImgs": null
+                "productionImgs": ""
+            },
+            {
+                "id": 325,
+                "teacherId": "ce242bb2-1730-4d77-a699-7d70f277cba9",
+                "teacherName": "监测",
+                "students": [
+                    {
+                        "observationId": 325,
+                        "studentId": "37e7df0f-9b43-4533-9d08-1dbe5c988bac",
+                        "studentName": "201901",
+                        "studentNo": "99"
+                    },
+                    {
+                        "observationId": 325,
+                        "studentId": "37e7df0f-9b43-4533-9d08-1dbe5c988bac",
+                        "studentName": "201901",
+                        "studentNo": "99"
+                    }
+                ],
+                "title": "活动b",
+                "time": 1577956401000,
+                "responsibleTeacherId": "ce242bb2-1730-4d77-a699-7d70f277cba9",
+                "responsibleTeacherName": "监测",
+                "content": "活动内容c",
+                "analysis": "活动分析c",
+                "measure": "活动方法",
+                "observationImgs": "",
+                "productionImgs": ""
+            },
+            {
+                "id": 324,
+                "teacherId": "ce242bb2-1730-4d77-a699-7d70f277cba9",
+                "teacherName": "监测",
+                "students": [
+                    {
+                        "observationId": 324,
+                        "studentId": "37e7df0f-9b43-4533-9d08-1dbe5c988bac",
+                        "studentName": "201901",
+                        "studentNo": "99"
+                    },
+                    {
+                        "observationId": 324,
+                        "studentId": "37e7df0f-9b43-4533-9d08-1dbe5c988bac",
+                        "studentName": "201901",
+                        "studentNo": "99"
+                    }
+                ],
+                "title": "活动b",
+                "time": 1577956373000,
+                "responsibleTeacherId": "ce242bb2-1730-4d77-a699-7d70f277cba9",
+                "responsibleTeacherName": "监测",
+                "content": "活动内容c",
+                "analysis": "活动分析c",
+                "measure": "活动方法",
+                "observationImgs": "",
+                "productionImgs": ""
+            },
+            {
+                "id": 317,
+                "teacherId": "ce242bb2-1730-4d77-a699-7d70f277cba9",
+                "teacherName": "监测",
+                "students": [],
+                "title": "活动b",
+                "time": 1577940675000,
+                "responsibleTeacherId": "ce242bb2-1730-4d77-a699-7d70f277cba9",
+                "responsibleTeacherName": "监测",
+                "content": "活动内容c",
+                "analysis": "活动分析c",
+                "measure": "活动方法",
+                "observationImgs": "",
+                "productionImgs": ""
+            },
+            {
+                "id": 316,
+                "teacherId": "ce242bb2-1730-4d77-a699-7d70f277cba9",
+                "teacherName": "监测",
+                "students": [],
+                "title": "活动b",
+                "time": 1577940675000,
+                "responsibleTeacherId": "ce242bb2-1730-4d77-a699-7d70f277cba9",
+                "responsibleTeacherName": "监测",
+                "content": "活动内容c",
+                "analysis": "活动分析c",
+                "measure": "活动方法",
+                "observationImgs": "",
+                "productionImgs": ""
+            },
+            {
+                "id": 315,
+                "teacherId": "ce242bb2-1730-4d77-a699-7d70f277cba9",
+                "teacherName": "监测",
+                "students": [],
+                "title": "活动b",
+                "time": 1577940552000,
+                "responsibleTeacherId": "ce242bb2-1730-4d77-a699-7d70f277cba9",
+                "responsibleTeacherName": "监测",
+                "content": "活动内容c",
+                "analysis": "活动分析c",
+                "measure": "活动方法",
+                "observationImgs": "",
+                "productionImgs": ""
+            },
+            {
+                "id": 314,
+                "teacherId": "ce242bb2-1730-4d77-a699-7d70f277cba9",
+                "teacherName": "监测",
+                "students": [],
+                "title": "活动b",
+                "time": 1577940552000,
+                "responsibleTeacherId": "ce242bb2-1730-4d77-a699-7d70f277cba9",
+                "responsibleTeacherName": "监测",
+                "content": "活动内容c",
+                "analysis": "活动分析c",
+                "measure": "活动方法",
+                "observationImgs": "",
+                "productionImgs": ""
+            },
+            {
+                "id": 313,
+                "teacherId": "ce242bb2-1730-4d77-a699-7d70f277cba9",
+                "teacherName": "监测",
+                "students": [],
+                "title": "活动b",
+                "time": 1577940280000,
+                "responsibleTeacherId": "ce242bb2-1730-4d77-a699-7d70f277cba9",
+                "responsibleTeacherName": "监测",
+                "content": "活动内容c",
+                "analysis": "活动分析c",
+                "measure": "活动方法",
+                "observationImgs": "",
+                "productionImgs": ""
             }
         ],
-        "count": 2,
-        "totalnum": 2,
+        "count": 10,
+        "totalnum": 17,
         "pindex": 0
     }
 }
@@ -277,7 +441,6 @@ studentId来自于session中FAMILY_STUDENTID属性
 
 ```json
 {
-  "studentId":"37e7df0f-9b43-4533-9d08-1dbe5c988bac",
   "id":7,
   "time":1576861211000
 }
@@ -288,14 +451,12 @@ studentId来自于session中FAMILY_STUDENTID属性
 ```json
 [
   {
-    "studentId": "37e7df0f-9b43-4533-9d08-1dbe5c988bac",
     "id": 7,
     "time": 1576845736000
   },
   {
-    "studentId": "37e7df0f-9b43-4533-9d08-1dbe5c988bac",
     "id": 7,
-    "t": 1576845736000
+    "time": 1576845736000
   }
 ]
 ```
