更新教师上次基准照片接口

--- a/人脸检索.md
+++ b/人脸检索.md
@@ -26,7 +26,7 @@ schoolId:学校id
 
 
 
-# 学生上传个人人脸识别基准
+# 学生上传个人人脸识别基准照片
 
 ## api
 
@@ -64,6 +64,49 @@ type: 固定为1
     }
 }
 ```
+
+# 教师上传指定学生人脸识别基准照片
+
+## api
+
+### post方法
+
+/api/face/uploadByStudent
+
+### 参数
+
+```
+file: (binary)
+type: 固定为1
+studentId: 学生id
+```
+
+## 示例
+
+/api/face/uploadByStudent
+
+### 返回
+
+```json
+{
+    "code": 200,
+    "msg": "正常返回",
+    "result": {
+        "data": [
+            {
+                "studentId": "xxxxxxxx",
+                "resourceId": "53e089fe-8de3-4cab-abdd-4e9f7a70f789",
+                "url": "/upload/1/f10bfdb1-06d1-4fc0-a174-4e1d9b8f82ab.jpg"
+            }
+        ],
+        "count": 1,
+        "totalnum": 1,
+        "pindex": 0
+    }
+}
+```
+
+# 
 
 # 上传活动照片并进行人脸检索
 
