新增批量上传图片并识别接口

--- a/人脸检索.md
+++ b/人脸检索.md
@@ -120,7 +120,6 @@ studentId: 学生id
 
 ```
 file: (binary)
-type: 固定为1
 ```
 
 ## 示例
@@ -151,6 +150,61 @@ type: 固定为1
             }
         ]
     }
+}
+```
+
+# 
+
+# （批量）上传活动照片并进行人脸检索
+
+## api
+
+### post方法
+
+/api/face/uploadImages
+
+### 参数
+
+```
+file: (binary)
+```
+
+## 示例
+
+/api/face/uploadImages
+
+### 返回
+
+```json
+{
+    "code": 200,
+    "msg": "正常返回",
+    "data": [
+        {
+            "resourceId": "0f484fd3-1ced-4f32-afb4-df486890f649",
+            "url": "/upload/1/ad5c8289-e2bd-4835-9c18-60e4db54b54e.jpg",
+            "students": [
+                {
+                    "studentId": "zzz的学生id",
+                    "studentName": "周兴明",
+                    "url": "/upload/1/90cc1c04-f1ca-4fe9-88e9-dcd9018446a2.jpg",
+                    "resourcesId": "7b874fc4-5b06-495b-92f7-1f170d711e69"
+                },
+                {
+                    "studentId": "dddd的学生id",
+                    "studentName": "祝蔷",
+                    "url": "/upload/1/de63e3f2-3d25-42d4-b65b-0332262b0123.jpg",
+                    "resourcesId": "21833f73-6db0-403a-8bf6-6431535f657c"
+                },
+                {
+                    "studentId": "37e7df0f-9b43-4533-9d08-1dbe5c988bac",
+                    "studentName": "201901",
+                    "url": "/upload/1/dfd60266-dfe8-458b-8517-a69e159f7254.jpg",
+                    "resourcesId": "594a59a1-1950-477f-b548-4691c9e7a2fe"
+                }
+            ]
+        }
+    ]
 }
 ```
 
