--- a/家庭报告.md
+++ b/家庭报告.md
@@ -534,7 +534,7 @@ resourceIds:3fc1b509-fa3b-41a8-adec-50d01b73dd91,ccc3adeb-b8b6-4fa7-9062-9e19592
 
 ## api
 
-/api/observation/report/family/modifyArea9?id=1&content=在领域9的总结&obIds=328&resourceIds=3fc1b509-fa3b-41a8-adec-50d01b73dd91,ccc3adeb-b8b6-4fa7-9062-9e19592fc692
+/api/observation/report/family/modifyFamilyObservation
 
 ### post方法
 
