增加家庭端查询本学期所有周次观察记录的功能，新增pindex、number参数

--- a/评价系统观察记录.md
+++ b/评价系统观察记录.md
@@ -359,7 +359,7 @@ classId: f057359a-0ffb-4509-b194-129fb732994e
 }
 ```
 
-# 历史观察记录（按学生studentId）
+# 历史观察记录（家庭端，按学生studentId）
 
 ## api
 
@@ -374,7 +374,9 @@ classId: f057359a-0ffb-4509-b194-129fb732994e
 ### 参数
 
 ```
-week: 17
+week: 17 #当week=0时代表查询本学期所有周次的观察记录
+pindex(非必须): 起始位置，默认为0
+number(非必须): 请求数量，默认为10
 ```
 
 ### 返回
