上传照片添加人脸检索结果

--- a/评价系统观察记录.md
+++ b/评价系统观察记录.md
@@ -33,45 +33,121 @@ endld: 结束号
 
 
 
-# 上传观察记录照片
+# 上传观察记录照片（单张）
 
 ## api
 
 ### post方法
 
-/api/user-resource/upload
+/api/face/uploadImage
 
 ### 参数
 
 ```
-file: (binary)
-search: yes
-type: 类型
+file: (binary) // 上传的文件
+search: yes // 进行人脸检索
 ```
 
 ## 示例
 
-/api/user-resource/upload
+/api/face/uploadImage
 
 ### 返回
 
 ```json
 {
-    "code":200,
-    "msg":"正常返回",
-    "result":{
-        "data":[
+    "code": 200,
+    "msg": "正常返回",
+    "data": {
+        "resourceId": "410c338a-13d3-44a7-a7bb-bed2a6a7e31c",
+        "url": "/upload/1/559776b5-b339-4e41-8432-a75a42f23d87.jpg",
+        "students": [
             {
-                "resourceId":"ccc3adeb-b8b6-4fa7-9062-9e19592fc692",
-                "url":"/upload/1/09bc7470-3156-4ae6-991c-40afa373917b.jpeg"
+                "studentId": "37e7df0f-9b43-4533-9d08-1dbe5c988bac",
+                "studentName": "201901",
+                "url": "/upload/1/dfd60266-dfe8-458b-8517-a69e159f7254.jpg",
+                "resourcesId": "594a59a1-1950-477f-b548-4691c9e7a2fe"
+            },
+            {
+                "studentId": "f4a0f544-92ca-4c78-8a1a-027ebcc6242e",
+                "studentName": "学生甲",
+                "url": "/upload/1/9b8f8bad-5312-43d6-bfbf-551da62c2c52.jpg",
+                "resourcesId": "40be0a54-f4cf-4e81-bd54-d53955707dfc"
             }
-        ],
-        "count":1,
-        "totalnum":1,
-        "pindex":0
+        ]
     }
 }
 ```
+
+# 上传观察记录照片（批量）
+
+## api
+
+### post方法
+
+/api/face/uploadImages
+
+### 参数
+
+```
+file: (binary) // 上传的照片
+...
+file: (binary) // 上传的照片
+search: yes // 进行人脸检索
+```
+
+## 示例
+
+/api/face/uploadImages
+
+### 返回
+
+```json
+{
+    "code": 200,
+    "msg": "正常返回",
+    "data": [
+        {
+            "resourceId": "36c6f4f5-a42e-4f48-9196-680b2515f3dc",
+            "url": "/upload/1/6914a26d-37d4-46f4-a2d0-410dfed1f63c.jpg",
+            "students": [
+                {
+                    "studentId": "37e7df0f-9b43-4533-9d08-1dbe5c988bac",
+                    "studentName": "201901",
+                    "url": "/upload/1/dfd60266-dfe8-458b-8517-a69e159f7254.jpg",
+                    "resourcesId": "594a59a1-1950-477f-b548-4691c9e7a2fe"
+                },
+                {
+                    "studentId": "f4a0f544-92ca-4c78-8a1a-027ebcc6242e",
+                    "studentName": "学生甲",
+                    "url": "/upload/1/9b8f8bad-5312-43d6-bfbf-551da62c2c52.jpg",
+                    "resourcesId": "40be0a54-f4cf-4e81-bd54-d53955707dfc"
+                }
+            ]
+        },
+        {
+            "resourceId": "824c93a2-9c07-48af-9768-9d5b04331a47",
+            "url": "/upload/1/bf266fd5-473d-4baf-948e-b65366f3e655.jpg",
+            "students": [
+                {
+                    "studentId": "37e7df0f-9b43-4533-9d08-1dbe5c988bac",
+                    "studentName": "201901",
+                    "url": "/upload/1/dfd60266-dfe8-458b-8517-a69e159f7254.jpg",
+                    "resourcesId": "594a59a1-1950-477f-b548-4691c9e7a2fe"
+                },
+                {
+                    "studentId": "f4a0f544-92ca-4c78-8a1a-027ebcc6242e",
+                    "studentName": "学生甲",
+                    "url": "/upload/1/9b8f8bad-5312-43d6-bfbf-551da62c2c52.jpg",
+                    "resourcesId": "40be0a54-f4cf-4e81-bd54-d53955707dfc"
+                }
+            ]
+        }
+    ]
+}
+```
+
+
 
 # 提交观察记录
 
