上传疫苗接种记录附件照片接口

--- a/疫苗接种记录.md
+++ b/疫苗接种记录.md
@@ -34,7 +34,44 @@ name: 用户输入的关键字，可以为空字符串
 }
 ```
 
+# 上传疫苗接种记录附件照片
 
+## api
+
+### post方法
+
+/api/user-resource/upload
+
+### 参数
+
+```json
+file: (binary) 
+type: 类型
+```
+
+### 示例
+
+/api/user-resource/upload
+
+### 返回
+
+```json
+{
+    "code":200,
+    "msg":"正常返回",
+    "result":{
+        "data":[
+            {
+                "resourceId":"ccc3adeb-b8b6-4fa7-9062-9e19592fc692",
+                "url":"/upload/1/09bc7470-3156-4ae6-991c-40afa373917b.jpeg"
+            }
+        ],
+        "count":1,
+        "totalnum":1,
+        "pindex":0
+    }
+}
+```
 
 # 增加疫苗接种记录（家长端）
 
