--- a/家庭报告.md
+++ b/家庭报告.md
@@ -604,3 +604,137 @@ next:未来方案
 }
 ```
 
+# 15. 获取5大领域数据
+
+## api
+/api/observation/report/family/getArea5
+    
+### get方法
+
+### 参数
+
+```
+studentId: 学生id
+round: 报告轮次
+```
+
+## 示例
+
+/api/observation/report/family/getArea5?studentId=37e7df0f-9b43-4533-9d08-1dbe5c988bac&round=1
+```
+ajax 的data参数
+data:{
+    studentId:'37e7df0f-9b43-4533-9d08-1dbe5c988bac',
+	round:round
+}
+```
+
+## 返回
+```json
+   {
+	"id":1,
+	"studentId":"37e7df0f-9b43-4533-9d08-1dbe5c988bac",
+	"studentName":"王小明",
+	"startTime":1,
+	"endTime":2,
+	"teacherId":"asdfasdf",
+	"teacherName":"金星",
+	"classId":"asdfhkashdflkaj",
+	"ok":true,
+	"round":1,
+	"familyobservation":"家庭观察安排内容时",
+	"next":"未来方案安排内容时，",
+	"healthy":[
+		{
+		 "area":3,
+		 "areaName":"身体发展和健康",
+		 "areaReport":"这种写法的好 处是事物发展或社会活动的全过程清楚明白。",
+		 "areaObIds":["观察id1","观察id2","观察id3"],
+		 "areaResourceIds":["ccc3adeb-b8b6-4fa7-9062-9e19592fc692",
+				    "ccc3adeb-b8b6-4fa7-9062-9e19592fc692"],
+		 "areaResource":[null,null]
+		}],
+	"language":[
+		{
+		 "area":4,
+		 "areaName":"语言、读写和交流",
+		 "areaReport":"然后用横式结构总结经验或教训。",
+		 "areaObIds":["观察id1","观察id2","观察id3"],
+		 "areaResourceIds":["ccc3adeb-b8b6-4fa7-9062-9e19592fc692",
+				    "ccc3adeb-b8b6-4fa7-9062-9e19592fc692"],
+		 "areaResource":[null,null]
+		},
+		{
+		 "area":9,
+		 "areaName":"语言学习",
+		 "areaReport":"然后用横式结构总结经验或教训。",
+		 "areaObIds":["328"],
+		 "areaResourceIds":["3fc1b509-fa3b-41a8-adec-50d01b73dd91",
+				    "ccc3adeb-b8b6-4fa7-9062-9e19592fc692"],
+		 "areaResource":[{"resourceId":"3fc1b509-fa3b-41a8-adec-50d01b73dd91",
+				  "url":"/upload/1/9344afbf-373d-470a-ab7f-d965856d8d60.jpg"},
+				  null]
+		}],
+	"science":[
+		{
+		 "area":1,
+		 "areaName":"学习品质",
+		 "areaReport":"对大家的号召。",
+		 "areaObIds":["328"],
+		 "areaResourceIds":["3fc1b509-fa3b-41a8-adec-50d01b73dd91",
+				    "ccc3adeb-b8b6-4fa7-9062-9e19592fc692"],
+		 "areaResource":[{"resourceId":"3fc1b509-fa3b-41a8-adec-50d01b73dd91",
+				  "url":"/upload/1/9344afbf-373d-470a-ab7f-d965856d8d60.jpg"},
+				  null]
+		},
+		{
+		 "area":5,
+		 "areaName":"数学",
+		 "areaReport":"然后用横式结构总结经验或教训",
+		 "areaObIds":["观察id1","观察id2","观察id3"],
+		 "areaResourceIds":["ccc3adeb-b8b6-4fa7-9062-9e19592fc692",
+				    "ccc3adeb-b8b6-4fa7-9062-9e19592fc692"],
+		 "areaResource":[null,null]
+		},
+		{
+ 		 "area":7,
+		 "areaName":"科学和技术",
+		 "areaReport":null,
+		 "areaObIds":[],
+		 "areaResourceIds":[],
+		 "areaResource":[]
+		}],
+	"society":[
+		{
+		 "area":2,
+		 "areaName":"社会性和情感发展",
+		 "areaReport":"针砭等作用。",
+		 "areaObIds":["328"],
+		 "areaResourceIds":["3fc1b509-fa3b-41a8-adec-50d01b73dd91",
+				    "ccc3adeb-b8b6-4fa7-9062-9e19592fc692"],
+		 "areaResource":[{"resourceId":"3fc1b509-fa3b-41a8-adec-50d01b73dd91",
+				  "url":"/upload/1/9344afbf-373d-470a-ab7f-d965856d8d60.jpg"},
+				  null]
+		},
+		{	
+		 "area":8,
+		 "areaName":"社会学习",
+		 "areaReport":"经验或教训。",
+		 "areaObIds":["328"],
+		 "areaResourceIds":["ccc3adeb-b8b6-4fa7-9062-9e19592fc692",
+				    "ccc3adeb-b8b6-4fa7-9062-9e19592fc692"],
+		 "areaResource":[null,null]
+		}],
+	"art":[
+	      {
+	       "area":6,
+	       "areaName":"创造性艺术",
+	       "areaReport":"经验或教训。",
+ 	       "areaObIds":["观察id1","观察id2","观察id3"],
+	       "areaResourceIds":["ccc3adeb-b8b6-4fa7-9062-9e19592fc692",
+				  "ccc3adeb-b8b6-4fa7-9062-9e19592fc692"],
+		"areaResource":[null,null]
+		}]
+    }
+    
+```    
